Fix mobile menu shifting

--- a/styles/Forms.module.css
+++ b/styles/Forms.module.css
@@ -19,7 +19,7 @@
 }
 
 .searchWrap input {
-    flex: 1;
+    flex-grow: 1;
 }
 
 .searchWrap button {
